# nonebot-adapter-gocq

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: manual.md
nonebot/adapters/gocq/: __init__.py  bot.pyi
nonebot_adapter_gocq/: __init__.py  bot.py  config.py  event.py  exception.py  message.py  permission.py  utils.py
